--- a/index.yaml
+++ b/index.yaml
@@ -3,17 +3,11 @@
 # see REP 141: http://ros.org/reps/rep-0141.html
 ---
 distributions:
-  hydro:
-    distribution: hydro/distribution.yaml
-    distribution_cache: http://localhost/rosdistro/hydro-cache.yaml.gz
-    doc_builds: [hydro/doc-build.yaml]
-    release_builds: [hydro/release-build.yaml]
-    source_builds: [hydro/source-build.yaml]
-  indigo:
-    distribution: indigo/distribution.yaml
-    distribution_cache: http://localhost/rosdistro/indigo-cache.yaml.gz
-    doc_builds: [indigo/doc-build.yaml]
-    release_builds: [indigo/release-build.yaml]
-    source_builds: [indigo/source-build.yaml]
+  kinetic:
+    distribution: kinetic/distribution.yaml
+    distribution_cache: http://localhost/rosdistro/kinetic-cache.yaml.gz
+    doc_builds: [kinetic/doc-build.yaml]
+    release_builds: [kinetic/release-build.yaml]
+    source_builds: [kinetic/source-build.yaml]
 type: index
 version: 2
